Renamed the restart button.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="gameStatusMensage">
         <div id="status">Início</div>
-        <button id="reset">REINICIAR</button>
+        <button id="reset">RESET</button>
     </div>
 
 </body>
